Включила создание и расчет платежа в систему, не создавая контроллеров